--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='friendApp'>
 <head>
   <title>Angular Friends</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body ng-controller='FriendController'>
 
   <h1>The <strong>facebook</strong> Friend Machine</h1>
 
@@ -56,6 +56,11 @@
         </div>
       </li>
     </ul>
+  </div>
+
+  <div ng-repeat="friend in friends">
+    <h2>{{friend.name}}</h2>
+    <h2>{{friend.status}}</h2>
   </div>
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
