--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body ng-controller='FriendController'>
+<body ng-cloak ng-controller='FriendController'>
 
   <h1>The <strong>facebook</strong> Friend Machine</h1>
 
@@ -14,12 +14,12 @@
     <form class="form-inline searchForm" role="form">
       <div class="form-group">
 
-        <input class="form-control" placeholder="Search Anything About Your Friends">
-        <!-- STEP 5: Get rid of the one above when you uncomment the below-->
-          <!--
-        <input class="form-control" placeholder="Search Name">
-        <input class="form-control" placeholder="Search Location">
-          -->
+        <!-- <input ng-model="searchTerm" class="form-control"
+          placeholder="Search Anything About Your Friends"> --> -->
+        <!-- STEP 5: Get rid of the one above when you uncomment the below -->
+
+        <input ng-model="search.name" class="form-control" placeholder="Search Name">
+        <input ng-model="search.current_location.city" class="form-control" placeholder="Search Location">
 
         <select class="input-medium">
           <option>Name</option>
@@ -38,28 +38,25 @@
     </form>
 
     <ul>
-      <li class='friend'>
-        <img class="profile-pic" src='http://placebear.com/50/50.jpg'>
+      <li class='friend' ng-repeat="friend in friends | filter: current_location">
+        <img class="profile-pic" src="{{friend.pic_square}}">
 
-        <h3>Cali Fornia</h3>
+        <h3>{{friend.name}}</h3>
 
         <div class="location">
-          Location: New Port Beach, California, United States
+          Location: {{friend.current_location.name}}
         </div>
 
         <div class="status">
-          Status: I hate the snow. I wish I was on the beach right now!!! <span class="hashtag">#ihateprovo</span>
+          <!-- Status: I hate the snow. I wish I was on the beach right now!!! <span class="hashtag">#ihateprovo</span> -->
+          Status: {{friend.status.message}}
         </div>
 
         <div class="num-friends">
-          Friends: 1,367
+          Friends: {{friend.friend_count}}
         </div>
       </li>
     </ul>
-  </div>
-
-  <div ng-repeat="friend in friends">
-    <h2>{{friend.name}}</h2>
   </div>
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
