--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
       <div class="form-group">
 
         <!-- <input ng-model="searchTerm" class="form-control"
-          placeholder="Search Anything About Your Friends"> --> -->
+          placeholder="Search Anything About Your Friends"> -->
         <!-- STEP 5: Get rid of the one above when you uncomment the below -->
 
-        <input ng-model="search.name" class="form-control" placeholder="Search Name">
+        <input ng-model="search.$" class="form-control" placeholder="Search Name">
         <input ng-model="search.current_location.city" class="form-control" placeholder="Search Location">
 
         <select class="input-medium">
-          <option>Name</option>
-          <option>#Friends</option>
-          <option>City</option>
-          <option>State</option>
-          <option>Country</option>
+          <option value="name" ng-model="name">Name</option>
+          <option value="friends" ng-model="friends">#Friends</option>
+          <option value="current_location.city" ng-model="current_location.city">City</option>
+          <option value="current_location.state" ng-model="current_location.state">State</option>
+          <option value="current_location.country" ng-model="current_location.country">Country</option>
         </select>
 
         <select class="input-medium">
-          <option value="+">Descending</option>
-          <option value="-">Ascending</option>
+          <option ng-model="descending" value="+">Descending</option>
+          <option ng-model="ascending" value="-">Ascending</option>
         </select>
 
       </div>
     </form>
 
     <ul>
-      <li class='friend' ng-repeat="friend in friends | filter: current_location">
+      <li class='friend' ng-repeat="friend in friends | filter: search | orderBy: '-current_location.state' : descending">
         <img class="profile-pic" src="{{friend.pic_square}}">
 
         <h3>{{friend.name}}</h3>
